# moodlectl

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  main.py  moodlectl.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
installer/: moodlectl.iss
moodlectl/: __main__.py  config.py  types.py
moodlectl/ai/: client.py  grader.py  responder.py
moodlectl/cli/: analytics.py  announcements.py  assignments.py  auth.py  content.py  courses.py  grades.py  grading.py  main.py  messages.py  questions.py  quizzes.py  reports.py
moodlectl/client/: __init__.py  api.py  base.py
moodlectl/features/: analytics.py  announcements.py  assignments.py  content.py  content_yaml.py  courses.py  grades.py  grading.py  messages.py  quizzes.py  reports.py
moodlectl/output/: charts.py  export.py  formatters.py
tests/: conftest.py  test_announcements.py  test_courses.py  test_demo_e2e.py
