[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moodlectl"
version = "0.2.1"
description = "Moodle LMS automation and AI tool for university instructors"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Murhaf-Mo"}]
requires-python = ">=3.12"
keywords = ["moodle", "lms", "cli", "automation", "university"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Education",
]
dependencies = [
    "requests>=2.33",
    "beautifulsoup4>=4.14",
    "typer>=0.15",
    "rich>=13",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Murhaf-Mo/moodlectl"
Repository = "https://github.com/Murhaf-Mo/moodlectl"
Issues = "https://github.com/Murhaf-Mo/moodlectl/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "pyinstaller>=6.0",
    "build",
]
export = [
    "openpyxl>=3.1",
]
analytics = [
    "plotext>=5.2.8",
    "matplotlib>=3.8.0",
]
browser = [
    "selenium>=4.20",
    "webdriver-manager>=4.0",
]

[project.scripts]
moodlectl = "moodlectl.cli.main:app"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# openpyxl and plotext are optional deps without full stubs — suppress noise
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
# matplotlib stubs use Unknown for **kwargs throughout — not a code defect
reportUnknownMemberType = "none"

[tool.ruff]
target-version = "py312"
line-length = 100
